--- a/src/style.css
+++ b/src/style.css
@@ -68,9 +68,7 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -85,6 +83,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.three {
+  outline: none;
 }
 
 .fade-enter-active,
