+ og:image; * refactored(Tres.js) lessons: 3 - 9; - temporary removed part of lessons.

--- a/components/LessonsList/LessonsList.less
+++ b/components/LessonsList/LessonsList.less
@@ -1,4 +1,10 @@
 .lessons {
+  &__container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 64px;
+  }
+
   &__title {
     margin-bottom: 24px;
   }
