--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -29,17 +29,25 @@ html {
 body {
   height: 100%;
   min-height: 100vh;
-  color: @c-black;
+
   font-family: 'Hack', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
   Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: #232323;
+    color: @c-white;
+  }
+
+  @media (prefers-color-scheme: light) {
+    background-color: #fafafa;
+    color: @c-black;
+  }
 }
 
-.three {
-  position: fixed;
-  z-index: 0;
-  inset: 0;
-  outline: none;
+#__nuxt {
+  width: 100vw;
+  height: 100vh;
 }
