* fix attempt #2 - [vite:css] [less] .hover is undefined

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -1,4 +1,4 @@
 @import "./reset";
-@import "./_fonts";
-@import "./_base";
-@import "./_transitions";
+@import "./fonts";
+@import "./base";
+@import "./transitions";
