* fix attempt #4 - [vite:css] [less] .hover is undefined

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -1,4 +1,4 @@
-@import "./reset";
-@import "./fonts";
+@import "./_reset";
+@import "./_fonts";
+@import "./_transitions";
 @import "./base";
-@import "./transitions";
