refactor(lessons): revert changes from tresjs transition(10 of 24 completed lessons).
bumped dependencies.

--- a/assets/styles/base.less
+++ b/assets/styles/base.less
@@ -37,13 +37,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   @media (prefers-color-scheme: dark) {
-    background-color: #232323;
+    background-color: #121212;
     color: @c-white;
   }
 
   @media (prefers-color-scheme: light) {
-    background-color: #fafafa;
-    color: @c-black;
+    background-color: #FAFAFA;
+    color: #121212;
   }
 }
 
