--- a/assets/styles/base.less
+++ b/assets/styles/base.less
@@ -6,6 +6,14 @@
   font-weight: normal;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overscroll-behavior: contain;
+  text-size-adjust: 100%;
+}
+
 html {
   font-size: 16px;
 
@@ -48,6 +56,7 @@ body {
 }
 
 #__nuxt {
+  position: relative;
   width: 100vw;
   height: 100vh;
 }
